Finish top 100 clojars plus smattering of others